--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -156,6 +156,13 @@
 					left: 0%;
 				}
 			}
+
+			.mui-popup-input input {
+				/*popup 输入框*/
+				height: 34px;
+				border-color: #E4E4E4;
+				margin-top: 5px;
+			}
 		</style>
 	</head>
 
